# ros2_openjtalk

./: .gitignore  README.md
ros2_openjtalk/: package.xml  setup.cfg  setup.py
ros2_openjtalk/launch/: bringup.launch.py
ros2_openjtalk/ros2_openjtalk/: ros2_openjtalk_node.py  ros2_openjtalk_test.py
ros2_openjtalk_interfaces/: CMakeLists.txt  package.xml
ros2_openjtalk_interfaces/srv/: Talk.srv
