<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_openjtalk</name>
  <version>0.0.0</version>
  <description>OpenJtalk ROS 2 managed node </description>
  <maintainer email="koki.balian@gmail.com">koki-ogura</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>python3-pyaudio</depend>
  <depend>python3-pyopenjtalk</depend>
  <depend>ros2_openjtalk_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
